AI-JADEDEVS4/src/objects/NetExamUserCertification__c.object
<CustomObject>
    <description>NetExam UserCertification</description>
    <fields>
        <fullName>Certification_ID__c</fullName>
        <description>Certification ID</description>
        <label>Certification ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Name__c</fullName>
        <formula>NECertification__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certification Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Score__c</fullName>
        <label>Certification Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Certification_Status__c</fullName>
        <description>Certification Status</description>
        <label>Certification Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Completion Date</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolled_Date__c</fullName>
        <description>Enrolled Date</description>
        <label>Enrolled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Expiration Date</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NECertification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NE Certification</description>
        <label>NE Certification</label>
        <referenceTo>NECertification__c</referenceTo>
        <relationshipLabel>NetExam UserCertifications</relationshipLabel>
        <relationshipName>NetExam_UserCertifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NetExam_UserCertifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NetExam UserCertification</label>
    <nameField>
        <displayFormat>NUC-{0000000000}</displayFormat>
        <label>NetExamUserCertification Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NetExam UserCertifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>